UserServlet should not write responses directly
close #174